bin_PROGRAMS = dlinkcontrol

if LINK_TO_LIBCURL
LIBCURL_COMPILER_OPTIONS = $(LIBCURL_CPPFLAGS)
LIBCURL_LINKER_OPTIONS = $(LIBCURL)
else
LIBCURL_COMPILER_OPTIONS =
LIBCURL_LINKER_OPTIONS =
endif

dlinkcontrol_SOURCES = dlinkcontrol.c cJSON.h cJSON.c
dlinkcontrol_CFLAGS = $(LIBCURL_COMPILER_OPTIONS)
dlinkcontrol_LDFLAGS = $(LIBCURL_LINKER_OPTIONS)
